<resources>
    <string name="app_name">Aplikasi Sayuran</string>
    <string name="kentang">Kentang</string>
    <string name="paprika">Paprika</string>
    <string name="kubis">Kubis</string>
    <string name="tomat">Tomat</string>
    <string name="wortel">wortel</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="lihat_resep">Lihat Resep</string>
    <string name="kentangResep">Anekah olahan kentang</string>
</resources>