<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barriecito"
            android:text="Sayur Sayuran"
            android:textAlignment="center"
            android:textSize="70dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:scrollbars="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:background="@drawable/border">

            <ImageView
                android:id="@+id/imgResepKentang"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:src="@drawable/kentang_resep"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textResepKentang"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/imgResepKentang"
                android:text="@string/kentangResep"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgResepKentang"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/imgResepPaprika"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:src="@drawable/paprika_resep"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textResepPaprika"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/imgResepPaprika"
                    android:text="@string/kentangResep"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgResepPaprika"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgkentang"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:src="@drawable/kentang"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textkentang"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imgkentang"
            android:text="@string/kentang"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgkentang"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnkentang"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_below="@+id/imgkentang"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button"
            android:text="@string/lihat_detail"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgkentang" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgpaprika"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:src="@drawable/paprika"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textpaprika"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imgpaprika"
            android:text="@string/paprika"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgpaprika"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnpaprika"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_below="@+id/imgpaprika"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button"
            android:text="@string/lihat_detail"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgpaprika" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgtomat"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:src="@drawable/tomat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/texttomat"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imgtomat"
            android:text="@string/tomat"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgtomat"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btntomat"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_below="@+id/imgtomat"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button"
            android:text="@string/lihat_detail"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgtomat" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgwortel"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:src="@drawable/wortel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textwortel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imgwortel"
            android:text="@string/wortel"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgwortel"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnwortel"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_below="@+id/imgwortel"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button"
            android:text="@string/lihat_detail"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgwortel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgkubis"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:src="@drawable/kubis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textkubis"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imgkubis"
            android:text="@string/kubis"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgkubis"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnkubis"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_below="@+id/imgkubis"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button"
            android:text="@string/lihat_detail"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgkubis" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

</ScrollView>